--- a/_posts/2024-03-02-welcome.md
+++ b/_posts/2024-03-02-welcome.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Welcome to our blog!"
 date:   2024-03-02 09:16:35 +0600
-categories: [jekyll]
+categories: [Our Law Firm]
 post_image: "/assets/images/blog/10.jpg"
 author: Neera Datta
 ---
