changed title wording on the bullying blog post and added blog links back into the header and footer

--- a/_posts/2024-03-02-welcome.md
+++ b/_posts/2024-03-02-welcome.md
@@ -6,4 +6,18 @@ categories: [Our Law Firm]
 post_image: "/assets/images/blog/10.jpg"
 author: Neera Datta
 ---
-Welcome to our blog, where we delve into the heart of special education law in Virginia. Our mission is to empower families, provide clarity on complex regulations, and share insights on IEPs, 504 plans, school discipline, and advocacy strategies. Each post is designed to guide you through the nuances of the education system, highlighting rights, resources, and practical steps to support your child’s educational journey. Whether you're navigating new challenges or looking to stay informed, we’re here to offer expert advice and real-world solutions. Dive in and explore, as we work together to champion accessible, quality education for every student in Virginia.
+
+We’re thrilled to welcome you to our law firm’s blog, where we’re committed to empowering families and advocating for the rights of students with disabilities. Whether you’re navigating the complexities of IEPs, 504 Plans, school discipline, or other educational challenges, this space is designed to provide you with valuable insights, practical guidance, and the latest updates in special education law.
+
+Each post is designed to guide you through the nuances of the education system, highlighting rights, resources, and practical steps to support your child’s educational journey. Whether you're navigating new challenges or looking to stay informed, we’re here to offer expert advice and real-world solutions. Dive in and explore, as we work together to champion accessible, quality education for every student in Virginia.
+
+Here, you’ll find:
+
+Expert Advice: Clear and actionable tips to help you advocate effectively for your child’s education.
+Educational Resources: Information on legal rights, school policies, and best practices for students with disabilities.
+Community Support: Stories, advice, and encouragement for families walking a similar path.
+Our goal is to empower you with knowledge and tools to ensure your child receives the Free Appropriate Public Education (FAPE) they deserve.
+
+We invite you to explore our posts, share them with others who may benefit, and connect with us if you have questions or topics you’d like us to cover. Thank you for visiting, and we look forward to supporting you on your advocacy journey!
+
+Stay tuned and follow us on our Facebook and Instagram accounts for regular updates and resources to help your family thrive.
