--- a/_posts/2024-09-10-bullying.md
+++ b/_posts/2024-09-10-bullying.md
@@ -8,7 +8,7 @@ author: Neera Datta
 post_image: "/assets/images/blog/04.jpg"
 ---
 
-<h4><center>Hoping your child has a great day</center></h4>
+<h4><center>Hoping your child had a great day at school?</center></h4>
 <br>
 <p>When we send our children off to school we tell them have a good day and hope that the day is in fact a good one. We hope they will be happy, safe and surrounded by wonderful experiences that will some day turn into cherished memories. Some parents start their mornings off with positive affirmations, reading journaling or a dance party in the living room! </p>
 <h4></h4>
